--- a/GOF_Composite/GOF_Composite/GOF_Composite.vcxproj
+++ b/GOF_Composite/GOF_Composite/GOF_Composite.vcxproj
@@ -147,11 +147,17 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClInclude Include="component.h" />
+    <ClInclude Include="composite.h" />
+    <ClInclude Include="leaf.h" />
     <ClInclude Include="stdafx.h" />
     <ClInclude Include="targetver.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="component.cpp" />
+    <ClCompile Include="composite.cpp" />
     <ClCompile Include="GOF_Composite.cpp" />
+    <ClCompile Include="leaf.cpp" />
     <ClCompile Include="stdafx.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
