added uml as jpeg

--- a/FactoryMethodShape/FactoryMethodShape/FactoryMethodShape.vcxproj.filters
+++ b/FactoryMethodShape/FactoryMethodShape/FactoryMethodShape.vcxproj.filters
@@ -128,4 +128,9 @@
       <Filter>Resource Files</Filter>
     </None>
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="..\CST276SRS03 (1).jpg">
+      <Filter>Resource Files</Filter>
+    </Image>
+  </ItemGroup>
 </Project>
