--- a/FactoryMethodShape/FactoryMethodShape/FactoryMethodShape.vcxproj
+++ b/FactoryMethodShape/FactoryMethodShape/FactoryMethodShape.vcxproj
@@ -191,6 +191,9 @@
   <ItemGroup>
     <None Include="Shapes.json" />
   </ItemGroup>
+  <ItemGroup>
+    <Image Include="..\CST276SRS03 (1).jpg" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
